[Sync::IntegrationTests] Incorporate sign-in flow changes.

Both old and new sign-in flows were changed, which broke sync integration tests.
In this CL the sign-in code is updated for both flows:

- for the old flow, only "Next" button id has been changed;
- for the new flow:
  + new element ids;
  + different mechanism to wait for password field to appear.
    Previously this was achieved via javascript delay, however, the new flow has
    a redirect, which seems to reset injected javascript. The new approach is to
    inject new javascript for the check every second.

Also the detection of the flow had to be changed, because now the flows do not
share field ids anymore. Thus, the test just waits for either of the email
fields to appear.

Bug: 795071
Change-Id: I5bb940ab9e410837b0ce91c6bdcb38c91b95b29f
Reviewed-on: https://chromium-review.googlesource.com/840000
Commit-Queue: vitaliii <vitaliii@chromium.org>
Reviewed-by: Mihai Sardarescu (OOO until Jan 2nd) <msarda@chromium.org>
Reviewed-by: Patrick Noland <pnoland@google.com>
Cr-Commit-Position: refs/heads/master@{#526457}
Former-commit-id: 0f0700e77d47b6f1f22f58408cd2529dd152367a